@@ -1,5 +1,14 @@
 FFmpegfs NEWS
 
+Important changes in 2.13 (2022-09-XX):
+
+* Added --prebuffer_time parameter. Files will be decoded until the  buffer contains
+  he specified playing time, allowing playback to start smoothly without lags. Works
+  similar to --prebuffer_size but gives better control because it does not depend on
+  the bit rate. An example: when set to 25 seconds for HLS transcoding, this will
+  make sure that at least 2 complete segments will be available once the file is
+  released and visible.
+
 Important changes in 2.12 (2022-08-27):
 
 * The code has been run through clang-tidy to identify bug-prone or
